# stepfile-autogen

./: CMakeLists.txt  README.md  genXOR.py  getStepData.py  lazy.sh  net_weights.txt  prob.txt  prob_extract.py  processAudio.cpp  processAudio.h  songdata.txt  step-database  test.cpp  test.h
graphs/: lineplot.p  plot.p  plotWAV.sh  xticgen.py
include/: biquad.h  datatypes.h  genStep.h  nn.h  processAudio.h  test.h  utils.h
neural_net/: nn  nn.h  xor.txt
qt/: Makefile  datatypes.h  genStep.cpp  genStep.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_mainwindow.cpp  nn.cpp  nn.h  processAudio.cpp  processAudio.h  stepfile-auto  stepfile-auto.pro  stepfile-autogen.ui  ui_mainwindow.h  wavelet2d.cpp
src/: biquad.cpp  genStep.cpp  nn.cpp  processAudio.cpp  test.cpp  utils.cpp
src/third/: wavelet2d.cpp
stepfile-auto/: stepfile-auto.pro
third/fftw/lib/: libfftw3.la
third/fftw/lib/pkgconfig/: fftw3.pc
